[project]
name = "myt-cli"
version = "0.5.4"
authors = [
  { name="Nitin Mathew", email="nitn_mathew2000@hotmail.com" },
]
description = "myt - My Task Manager"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ['Click','rich','python-dateutil','mock','sqlalchemy','plotext','prompt_toolkit>=3.0']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS',
    'Operating System :: POSIX :: Linux',
    'Topic :: Office/Business',
]

[project.optional-dependencies]
dev = ['pytest', 'bandit', 'build', 'twine']

[project.scripts]
myt = "src.mytcli.myt:myt"

[project.urls]
Homepage = "https://github.com/nsmathew/myt-cli"
Issues = "https://github.com/nsmathew/myt-cli/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:sqlalchemy",
]

[tool.setuptools.packages.find]
exclude = [".github*"]
